--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="http://localhost:3000/assets/style.css" />
-    <title>learning app</title>
+    <title>学習管理アプリ</title>
   </head>
   <body>
     <noscript>learning app</noscript>
