style.css があたっていなかったので修正、やっと完成!

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="http://localhost:3000/assets/style.css" />
+    <link rel="stylesheet" href="%REACT_APP_PUBLIC_FOLDER%/style.css" />
     <title>学習管理アプリ</title>
   </head>
   <body>
